--- a/app/src/main/res/layout/content_view_animation.xml
+++ b/app/src/main/res/layout/content_view_animation.xml
@@ -11,5 +11,22 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sky.animationdemo.viewAnimation.ViewAnimationActivity"
     tools:showIn="@layout/activity_view_animation">
+    <TextView
+        android:id="@+id/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
+    <Button
+        android:id="@+id/sports"
+        android:layout_below="@+id/hello_world"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="动起来"/>
+    <Button
+        android:id="@+id/stop"
+        android:layout_below="@+id/sports"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="停止"/>
 
 </RelativeLayout>
